2014-10-24  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1: .TP was missing.

2014-10-19  Araki Ken  <arakiken@users.sf.net>

	* xlib/x_imagelib.c: kik_mem_malloc() etc are enabled if KIK_DEBUG is defined.

	* kik_mem.[ch]: kik_mem_remove() is added.

	* x_screen.c, x_screen_manager.c:
	  sixel_palette argument is added to get_picture_data().

	* ml_vt100_parser.[ch]:
	  - ml_vt100_parser_t::sixel_palette is added.
	  - sixel_palette argument is added to ml_xterm_event_listener_t::get_picture_data().

	* c_sixel.c, x_picture.h, fb/x_imagelib.c:
	  - "custom_palette" static variable is introduced and x_set_custom_sixel_palette()
	    is added.
	  - "#define color_tbl sixel_cmap" is removed.

2014-10-18  Araki Ken  <arakiken@users.sf.net>

	* c_sixel.c: HLS is supported.

	* im_ibus.c: Calling select(2) with an invalid file descriptor after
	  restarting ibus is fixed.

2014-10-17  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.[ch], x_screen.c: DECEFR is supported.

2014-10-13  Araki Ken  <arakiken@users.sf.net>

	* README, doc/ja/README.ja: Updated.

	* x_main_config.c: The default value of "type_engine" option is changed
	  from "xcore" to "xft".

	* configure.in: fribidi, xft and cairo are enabled by default.

	* im_ibus.c: "connected" and "disconnected" signals are handled.

2014-10-11  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c, x_picture.c: INLINEPIC_AVAIL_ROW is added.

2014-10-07  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c, x_picture.c: The previous fix is moved from x_picture.c
	  to x_screen.c.

2014-10-07  Araki Ken  <arakiken@users.sf.net>

	* x_picture.c: Inline pictures in back logs (except recent 1024 lines)
	  are removed.

2014-10-05  Araki Ken  <arakiken@users.sf.net>

	* ml_edit.c: Corrupt scrolling in Left-right margin which contains
	  full width characters is fixed.

2014-10-04  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: event->state & ModMask => compare_key_state_with_modmap().
